# pynbs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  pynbs.py  pyproject.toml  setup.py  test.nbs
.github/workflows/: main.yml
example/: demo.py  demo_song.nbs  new_file.nbs  old_demo_song.nbs  old_new_file.nbs
examples/: demo.py
pynbs/: __init__.py  file.py
tests/: conftest.py  test_song.py
tests/resources/: compat_demo_song.nbs
tests/snapshots/: song__create__new.nbs  song__notes_compat_demo_song_nbs__0.txt  song__notes_compat_old_demo_song_nbs__0.txt  song__notes_megalovania_nbs__0.txt  song__notes_nyan_cat_nbs__0.txt  song__notes_test_nbs__0.txt  song__notes_the_grounds_colour_is_yellow_nbs__0.txt  song__notes_turkish_march_nbs__0.txt
